[package]
name = "clipygo-plugin-demo"
version = "1.3.1"
edition = "2021"
description = "Demo subprocess target provider for clipygo"
authors = ["Georg Nelles"]
license = "MIT"
repository = "https://github.com/it-atelier-gn/clipygo-plugin-demo"

[[bin]]
name = "clipygo-plugin-demo"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
